--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Este repositório base fué creado para ayudarte en caso que no sepas como comenzar, recuerda que el portafolio es tu carta de presentación y debes darle tu cara, por eso te invitamos a personalizarlo según tu estilo y preferencias no te limites apenas al layout propuesto en figma  
 */
 :root {
-    --color-de-fondo: #d7f8ba;
+    --color-de-fondo: #000000;
     --color-de-fondo-menu: #ffffff;
     --color-de-link: #000000;
 }
