--- a/style.css
+++ b/style.css
@@ -99,17 +99,22 @@ a {
     
 /* ------------------------------ Sección sobre mí ----------------------------------*/
 
-.sobre-mi{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.sobre-mi,
+.habilidades,
+.aficiones,
+.formacion,
+.proyectos{
     padding: 1rem;
-    margin  : 2rem;
+    text-align: center;
+    align-content: center;
+    border-radius: 5rem;
+    margin: 2rem;
     background: #fafafa10;
     backdrop-filter: blur(0.2rem);
-    border-radius: 5rem;
+
 
 }
+
 .redes__img{
     display: flex;
     flex-direction: row;
@@ -130,9 +135,11 @@ a {
 
 /*--------------Sección de Habilidades y ección de Aficiones  ------------------------------*/
 
-
+.sobre-mi,
 .habilidades,
-.aficiones{
+.aficiones,
+.formacion,
+.proyectos{
     padding: 1rem;
     text-align: center;
     align-content: center;
@@ -140,12 +147,11 @@ a {
     margin: 2rem;
     background: #fafafa10;
     backdrop-filter: blur(0.2rem);
-
-
 }
 
 .habilidades__nombre,
-.aficiones__nombre{
+.aficiones__nombre,
+.formacion__titulo{
     color: white;
     text-shadow:  1px 2px 0px #000000;
 }
@@ -158,7 +164,8 @@ a {
     text-shadow: 3px 4px 0px #000000;
 }
 .habilidades__lista,
-.aficiones__lista{
+.aficiones__lista,
+.formacion__lista{
   
     list-style: none;
     display: flex;
@@ -168,7 +175,8 @@ a {
     flex-wrap: wrap;
 }
 .habilidades__elemento,
-.aficiones__elemento{
+.aficiones__elemento,
+.formacion__elemento{
     border-radius: 1rem;
     padding: 1.5rem;
     width: 200px;
@@ -182,6 +190,23 @@ a {
 }
 
 /*------------------------------ Sección de Proyectos --------------------------------*/
+
+
+.Name{
+    text-align: center;
+    font-size: 18px;
+    align-items: center;
+}
+.formacion__nombre{
+    color: white;   
+    text-shadow:  1px 2px 0px #000000;
+
+}
+.formacion__iconos{
+
+    width: 250px;
+}
+/*------------------------------ Experiencia Profesional---------------------------------*/
 
 
 /*------------------------------ Sección de Contacto ---------------------------------*/
