--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ a {
     font-weight: bolder;
 
 }
+
+.button{
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
     
 /* ------------------------------ Sección sobre mí ----------------------------------*/
 
@@ -139,7 +144,8 @@ a {
 .habilidades,
 .aficiones,
 .formacion,
-.proyectos{
+.proyectos,
+.contacto{
     padding: 1rem;
     text-align: center;
     align-content: center;
@@ -158,7 +164,9 @@ a {
 
 .aficiones__titulo,
 .habilidades__titulo,
-.sobre-mi__titulo{
+.sobre-mi__titulo,
+.proyectos__titulo,
+.contacto__titulo{
     font-size: 2rem;
     color: #ffffff;
     text-shadow: 3px 4px 0px #000000;
@@ -197,7 +205,8 @@ a {
     font-size: 18px;
     align-items: center;
 }
-.formacion__nombre{
+.formacion__nombre,
+.proyectos__nombre{
     color: white;   
     text-shadow:  1px 2px 0px #000000;
 
@@ -207,8 +216,10 @@ a {
     width: 250px;
 }
 /*------------------------------ Experiencia Profesional---------------------------------*/
+.Proyecto-alura{
 
-
+    width: 500px;
+}
 /*------------------------------ Sección de Contacto ---------------------------------*/
 
 
