--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ a {
   border:none;
   position:relative;
   height:45px;
-  font-size:1em;
+  font-size:11px;
   padding:2 1em;
   cursor:pointer;
   transition:800ms ease all;
